<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/verde14"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.fernandaochoa.oruga2.FormasPagoActivity">

    <ScrollView
        android:id="@+id/scrll_pago"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_esp1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/esp1" />

            <TextView
                android:id="@+id/tv_txt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/texto1"
                android:textColor="@color/verde03"
                android:textSize="@dimen/medium" />

            <TextView
                android:id="@+id/tv_txt4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:longClickable="false"
                android:text="@string/texto4"
                android:textAppearance="@color/azul03"
                android:textColor="@color/verde03"
                android:textSize="@dimen/medium"
                android:textStyle="normal"
                android:typeface="normal" />

            <TextView
                android:id="@+id/tv_txt5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/texto5"
                android:textAlignment="gravity"
                android:textColor="@color/verde03"
                android:textSize="@dimen/medium"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/tv_txt6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/texto6"
                android:textAlignment="gravity"
                android:textColor="@color/verde03"
                android:textSize="@dimen/medium"
                android:textStyle="normal" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>